# guitar_hero

3d/: README.md
3d/soildworks/: IPS114.SLDPRT  IPS114屏幕座.SLDPRT  M3平头螺丝.SLDPRT  五向开关帽.SLDPRT  底板.SLDPRT  顶板.SLDPRT
3d/soildworks/texture/: geek_raw.p2m  sma接口板反面.p2m  sma接口板正面.p2m  主板底面.p2m  主板正面.p2m
docs/: README.md
example/docs/: README.md
firmware/: README.md
hardware/docs/: README.md
hardware/pcb/LCEDA/: 8CH_ADC_CAPTURE_CARD.epro
hardware/sch/LCEDA/: 8CH_ADC_CAPTURE_CARD.epro
produce/bom/: 2025-1-18-V1.1.xlsx
produce/docs/: README.md
software/: CMakeLists.txt
software/docs/: README.md
software/lib/uart/windows/: WzSerialPort.cpp
